fix broken layout for flexbox
possible closes #18688, but should be test for other browser than FF and Chrome

--- a/docs/assets/scss/_content.scss
+++ b/docs/assets/scss/_content.scss
@@ -3,6 +3,7 @@
 //
 
 .bd-content {
+  min-width: 0px;
   > table {
     display: block;
     width: 100%;
